Create Menu Modify equals and Hashcode